--- a/index.html
+++ b/index.html
@@ -20,7 +20,8 @@
   </head>
   <body>
     <!-- jumbotron -->
-    
+    <div class="jumbotron"></div>
+    <!-- akhir jumbotron -->
 
     <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
