masukan gambar dan membuat bulat

--- a/index.html
+++ b/index.html
@@ -20,7 +20,9 @@
   </head>
   <body>
     <!-- jumbotron -->
-    <div class="jumbotron"></div>
+    <div class="jumbotron">
+      <img src="img/fotoku.jpg" class="img-circle">
+    </div>
     <!-- akhir jumbotron -->
 
     <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
