memberi judul web dan bawa ketengah

--- a/index.html
+++ b/index.html
@@ -20,8 +20,10 @@
   </head>
   <body>
     <!-- jumbotron -->
-    <div class="jumbotron">
+    <div class="jumbotron text-center">
       <img src="img/fotoku.jpg" class="img-circle">
+      <h1>Muhammad Syaiful Karim</h1>
+      <p>Student | Job Seaker</p>
     </div>
     <!-- akhir jumbotron -->
 
