--- a/index.html
+++ b/index.html
@@ -27,6 +27,12 @@
     </div>
     <!-- akhir jumbotron -->
 
+    <!-- About -->
+    <section class="about" id="about">
+      
+    </section>
+    <!-- Akhir about -->
+
     <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
     <!-- Include all compiled plugins (below), or include individual files as needed -->
