--- a/index.html
+++ b/index.html
@@ -29,7 +29,14 @@
 
     <!-- About -->
     <section class="about" id="about">
-      
+      <div class="container">
+        <div class="row">
+          <div class="col-sm-12">
+            <h2>About</h2>
+            <hr>
+          </div>
+        </div>
+      </div>
     </section>
     <!-- Akhir about -->
 
