membuat paragraf di about

--- a/index.html
+++ b/index.html
@@ -32,8 +32,16 @@
       <div class="container">
         <div class="row">
           <div class="col-sm-12">
-            <h2>About</h2>
+            <h2 class="text-center">About</h2>
             <hr>
+          </div>
+        </div>
+        <div class="row">
+          <div class="col-sm-6">
+            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Qui temporibus corporis eveniet nulla nam debitis repellendus fuga possimus soluta, quidem praesentium nihil labore, quia beatae! Quos ut esse aspernatur cumque.</p>
+          </div>
+          <div class="col-sm-6">
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Enim quam dolore voluptatum. Est, laborum eveniet! Natus, consequatur! Similique ducimus eum quam maxime perferendis, est, libero magni impedit dolores, iure atque?</p>
           </div>
         </div>
       </div>
