--- a/index.html
+++ b/index.html
@@ -37,10 +37,10 @@
           </div>
         </div>
         <div class="row">
-          <div class="col-sm-6">
+          <div class="col-sm-5 col-sm-offset-2">
             <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Qui temporibus corporis eveniet nulla nam debitis repellendus fuga possimus soluta, quidem praesentium nihil labore, quia beatae! Quos ut esse aspernatur cumque.</p>
           </div>
-          <div class="col-sm-6">
+          <div class="col-sm-5">
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Enim quam dolore voluptatum. Est, laborum eveniet! Natus, consequatur! Similique ducimus eum quam maxime perferendis, est, libero magni impedit dolores, iure atque?</p>
           </div>
         </div>
