--- a/index.html
+++ b/index.html
@@ -57,6 +57,13 @@
             <hr>
           </div>
         </div>
+
+        <div class="row">
+          <div class="col-sm-4">
+            <img src="img/portfolio/1.jpg"> //gambarnya di klik nanti membesar pakai lightbox
+          </div>
+        </div>
+
       </div>
     </section>
     <!-- akhir portfolio -->
