--- a/index.html
+++ b/index.html
@@ -60,7 +60,9 @@
 
         <div class="row">
           <div class="col-sm-4">
-            <img src="img/portfolio/1.jpg"> //gambarnya di klik nanti membesar pakai lightbox
+            <a href="" class="thumbnail">
+              <img src="img/portfolio/1.jpg">
+            </a>
           </div>
         </div>
 
