--- a/index.html
+++ b/index.html
@@ -64,11 +64,48 @@
               <img src="img/portfolio/1.jpg">
             </a>
           </div>
+          <div class="col-sm-4">
+            <a href="" class="thumbnail">
+              <img src="img/portfolio/1.jpg">
+            </a>
+          </div>
+          <div class="col-sm-4">
+            <a href="" class="thumbnail">
+              <img src="img/portfolio/1.jpg">
+            </a>
+          </div>
+          <div class="col-sm-4">
+            <a href="" class="thumbnail">
+              <img src="img/portfolio/1.jpg">
+            </a>
+          </div>
+          <div class="col-sm-4">
+            <a href="" class="thumbnail">
+              <img src="img/portfolio/1.jpg">
+            </a>
+          </div>
+          <div class="col-sm-4">
+            <a href="" class="thumbnail">
+              <img src="img/portfolio/1.jpg">
+            </a>
+          </div>
+          <!-- ukuran fotonya itu harus sama semua di rezize dahulu -->
         </div>
 
       </div>
     </section>
     <!-- akhir portfolio -->
+
+    <!-- contact -->
+    <section class="contact" id="contact">
+      <di class="container">
+        <div class="row-sm-12">
+          <h2>Contact</h2>
+          <hr>
+        </div>
+      </di>
+    </section>
+    <!-- akhir contact -->
 
     <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
