membuat form group

--- a/index.html
+++ b/index.html
@@ -99,11 +99,25 @@
     <!-- contact -->
     <section class="contact" id="contact">
       <di class="container">
-        <div class="row-sm-12">
+        <div class="row-sm-12 text-center">
           <h2>Contact</h2>
           <hr>
         </div>
       </di>
+      <div class="row">
+        <div class="col-sm-8 col-sm-offset-2">
+          <form>
+            <div class="form-group">
+              <label for="Nama">Nama</label>
+              <input type="text" id="Nama" class="form-control" placeholder="Masukan Nama">
+            </div>
+            <div class="form-group">
+              <label for="Email">Email</label>
+              <input type="email" id="Email" class="form-control" placeholder="Masukan Email">
+            </div>
+          </form>
+        </div>
+      </div>
     </section>
     <!-- akhir contact -->
 
