--- a/index.html
+++ b/index.html
@@ -108,13 +108,22 @@
         <div class="col-sm-8 col-sm-offset-2">
           <form>
             <div class="form-group">
-              <label for="Nama">Nama</label>
-              <input type="text" id="Nama" class="form-control" placeholder="Masukan Nama">
+              <label for="nama">Nama</label>
+              <input type="text" id="nama" class="form-control" placeholder="Masukan Nama">
             </div>
             <div class="form-group">
-              <label for="Email">Email</label>
-              <input type="email" id="Email" class="form-control" placeholder="Masukan Email">
+              <label for="email">Email</label>
+              <input type="email" id="email" class="form-control" placeholder="Masukan Email">
             </div>
+            <div class="form-group">
+              <label for="telp">No Telp</label>
+              <input type="tel" id="telp" class="form-control" placeholder="Masukan No Telp">
+            </div>
+            <select class="form-control">
+              <option>-- Choose Kategori --</option>
+              <option>Web Development</option>
+              <option>Electronica</option>
+            </select>
           </form>
         </div>
       </div>
