--- a/index.html
+++ b/index.html
@@ -120,10 +120,14 @@
               <input type="tel" id="telp" class="form-control" placeholder="Masukan No Telp">
             </div>
             <select class="form-control">
-              <option>-- Choose Kategori --</option>
+              <option>-- Pilih Kategori --</option>
               <option>Web Development</option>
               <option>Electronica</option>
-            </select>
+            </select><div class="form-group">
+              <label for="pesan">Pesan</label>
+              <textarea class="form-control" rows="10" placeholder="Masukan Pesan"></textarea>
+            </div>
+            <button type="submit" class="btn btn-primary">Kirim Pesan</button>
           </form>
         </div>
       </div>
