--- a/index.html
+++ b/index.html
@@ -134,6 +134,16 @@
     </section>
     <!-- akhir contact -->
 
+    <!-- Footer -->
+    <footer>
+      <div class="container">
+        <div class="row">
+          
+        </div>
+      </div>
+    </footer>
+    <!-- Akhir Footer -->
+
     <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
     <!-- Include all compiled plugins (below), or include individual files as needed -->
