--- a/index.html
+++ b/index.html
@@ -136,9 +136,11 @@
 
     <!-- Footer -->
     <footer>
-      <div class="container">
+      <div class="container text-center">
         <div class="row">
-          
+          <div class="col-sm-12">
+            <p>&copy; 2017 | built by <i class="glyphicon glyphicon-heart"></i> <a href="https://instagram.com/syaiful.dxsdr.com/">Cak Syaiful</a>.</p>
+          </div>
         </div>
       </div>
     </footer>
