menambahkan folow to tapi belum bisa glyphicon play

--- a/index.html
+++ b/index.html
@@ -142,6 +142,11 @@
             <p>&copy; 2017 | built by <i class="glyphicon glyphicon-heart"></i> <a href="https://instagram.com/syaiful.dxsdr.com/">Cak Syaiful</a>.</p>
           </div>
         </div>
+        <div class="row">
+          <div class="col-sm-12">
+            <i class="glyphicon glyphicon-play"></i><a href="https://instagram.com/syaiful.dxsdr.com/" class="btn btn-primary">Follow To My Instagram</a>
+          </div>
+        </div>
       </div>
     </footer>
     <!-- Akhir Footer -->
