membetulkan posisi glyphicon didalam folow

--- a/index.html
+++ b/index.html
@@ -139,12 +139,12 @@
       <div class="container text-center">
         <div class="row">
           <div class="col-sm-12">
-            <p>&copy; 2017 | built by <i class="glyphicon glyphicon-heart"></i> <a href="https://instagram.com/syaiful.dxsdr.com/">Cak Syaiful</a>.</p>
+            <p>&copy; 2017 | built by <i class="glyphicon glyphicon-heart"></i> <a href="https://www.instagram.com/syaiful.dxsdr/">Cak Syaiful</a>.</p>
           </div>
         </div>
         <div class="row">
           <div class="col-sm-12">
-            <i class="glyphicon glyphicon-play"></i><a href="https://instagram.com/syaiful.dxsdr.com/" class="btn btn-primary">Follow To My Instagram</a>
+            <a href="https://www.instagram.com/syaiful.dxsdr/" class="btn btn-primary"><i class="glyphicon glyphicon-play"></i>Follow To My Instagram</a>
           </div>
         </div>
       </div>
