membuat navbar gede

--- a/index.html
+++ b/index.html
@@ -19,6 +19,17 @@
     <![endif]-->
   </head>
   <body>
+
+    <!-- Navbar -->
+    <nav class="navbar navbar-default">
+      <div class="container-fluid">
+        <div class="navbar-header">
+          <a href="" class="navbar-brand">Muh Syaiful k</a>
+        </div>
+      </div>
+    </nav>
+    <!-- Akhir Nabvar -->
+
     <!-- jumbotron -->
     <div class="jumbotron text-center">
       <img src="img/fotoku.jpg" class="img-circle">
