--- a/index.html
+++ b/index.html
@@ -26,6 +26,11 @@
         <div class="navbar-header">
           <a href="" class="navbar-brand">Muh Syaiful k</a>
         </div>
+        <ul class="nav navbar-nav navbar-right">
+          <li><a href="">About</a></li>
+          <li><a href="">Portfolio</a></li>
+          <li><a href="">Contact</a></li>
+        </ul>
       </div>
     </nav>
     <!-- Akhir Nabvar -->
