--- a/index.html
+++ b/index.html
@@ -63,10 +63,10 @@
         </div>
         <div class="row">
           <div class="col-sm-5 col-sm-offset-2">
-            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Qui temporibus corporis eveniet nulla nam debitis repellendus fuga possimus soluta, quidem praesentium nihil labore, quia beatae! Quos ut esse aspernatur cumque.</p>
+            <p class="pKiri">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Qui temporibus corporis eveniet nulla nam debitis repellendus fuga possimus soluta, quidem praesentium nihil labore, quia beatae! Quos ut esse aspernatur cumque.</p>
           </div>
           <div class="col-sm-5">
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Enim quam dolore voluptatum. Est, laborum eveniet! Natus, consequatur! Similique ducimus eum quam maxime perferendis, est, libero magni impedit dolores, iure atque?</p>
+            <p class="pKanan">Lorem ipsum dolor sit amet consectetur adipisicing elit. Enim quam dolore voluptatum. Est, laborum eveniet! Natus, consequatur! Similique ducimus eum quam maxime perferendis, est, libero magni impedit dolores, iure atque?</p>
           </div>
         </div>
       </div>
