ganti foto jumbotron

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
 
     <!-- jumbotron -->
     <div class="jumbotron text-center">
-      <img src="img/fotoku.jpg" class="img-circle">
+      <img src="img/fotoku1.jpg" class="img-rounded">
       <h1>Muhammad Syaiful Karim</h1>
       <p>Student | Job Seaker</p>
     </div>
@@ -66,7 +66,7 @@
             <p class="pKiri">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Qui temporibus corporis eveniet nulla nam debitis repellendus fuga possimus soluta, quidem praesentium nihil labore, quia beatae! Quos ut esse aspernatur cumque.</p>
           </div>
           <div class="col-sm-5">
-            <p class="pKanan">Lorem ipsum dolor sit amet consectetur adipisicing elit. Enim quam dolore voluptatum. Est, laborum eveniet! Natus, consequatur! Similique ducimus eum quam maxime perferendis, est, libero magni impedit dolores, iure atque?</p>
+            <p class="pKanan123">Lorem ipsum dolor sit amet consectetur adipisicing elit. Enim quam dolore voluptatum. Est, laborum eveniet! Natus, consequatur! Similique ducimus eum quam maxime perferendis, est, libero magni impedit dolores, iure atque?</p>
           </div>
         </div>
       </div>
