memberikan celah pada sisi nya

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
       <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
     <![endif]-->
   </head>
-  <body>
+  <body class="mt-5">
 
     <!-- Navbar -->
     <nav class="navbar navbar-inverse navbar-fixed-top">
